--- a/index.html
+++ b/index.html
@@ -42,72 +42,78 @@
     (()=>{
         const A=React,B=A.useState,C=A.useMemo;
         const D=`Subject,Start Date,Start Time,End Date,End Time,Description,All Day Event
-[若魔麦たると] 朝活,2025/12/08,06:00,2025/12/08,07:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] 朝活,2025/12/08,07:00,2025/12/08,08:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/08,12:00,2025/12/08,13:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/08,19:00,2025/12/08,20:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/08,19:00,2025/12/08,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ゲーム,2025/12/08,20:00,2025/12/08,21:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] コラボ,2025/12/08,21:00,2025/12/08,22:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] ゲーム,2025/12/08,21:00,2025/12/08,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/09,00:00,2025/12/09,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔白ソーダ] ゲーム,2025/12/08,,,2025/12/08,,にゃんたじあ！スケジュール(時間指定なし),True
-[ニャマシュバ・ルッツ] ゲーム,2025/12/09,18:00,2025/12/09,19:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/09,19:00,2025/12/09,20:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/09,19:00,2025/12/09,20:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] 告知,2025/12/09,20:00,2025/12/09,21:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] コラボ,2025/12/09,20:00,2025/12/09,21:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] コラボ,2025/12/09,21:00,2025/12/09,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/10,00:00,2025/12/10,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔麦たると] 朝活,2025/12/10,07:00,2025/12/10,08:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/10,12:00,2025/12/10,13:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/10,18:00,2025/12/10,19:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/10,19:00,2025/12/10,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ゲーム,2025/12/10,19:00,2025/12/10,20:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/10,20:00,2025/12/10,21:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] 雑談,2025/12/10,21:00,2025/12/10,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/11,00:00,2025/12/11,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔白ソーダ] ゲーム,2025/12/10,,,2025/12/10,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔陽エル] ゲーム,2025/12/11,12:00,2025/12/11,13:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/11,18:00,2025/12/11,19:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] コラボ,2025/12/11,19:00,2025/12/11,20:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/11,19:00,2025/12/11,20:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] コラボ,2025/12/11,20:00,2025/12/11,21:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] VRCコラボ,2025/12/11,22:00,2025/12/11,23:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRCコラボ,2025/12/11,22:00,2025/12/11,23:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] VRCコラボ,2025/12/11,22:00,2025/12/11,23:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] VRCコラボ,2025/12/11,22:00,2025/12/11,23:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/12,12:00,2025/12/12,13:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/12,18:00,2025/12/12,19:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/12,19:00,2025/12/12,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] コラボ,2025/12/12,20:00,2025/12/12,21:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] ゲーム,2025/12/12,20:00,2025/12/12,21:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] コラボ,2025/12/12,21:00,2025/12/12,22:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRC,2025/12/12,21:00,2025/12/12,22:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] メン限,2025/12/12,23:00,2025/12/13,00:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/13,00:00,2025/12/13,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔陽エル] ゲーム,2025/12/13,12:00,2025/12/13,13:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] 企画,2025/12/13,12:00,2025/12/13,13:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] ゲーム,2025/12/13,15:00,2025/12/13,16:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] 動画投稿,2025/12/13,18:00,2025/12/13,19:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/13,19:00,2025/12/13,20:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/13,20:00,2025/12/13,21:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] コラボ,2025/12/13,21:00,2025/12/13,22:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] イベント,2025/12/13,21:00,2025/12/13,22:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] イベント,2025/12/13,21:00,2025/12/13,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] 歌枠,2025/12/13,22:00,2025/12/13,23:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/14,00:00,2025/12/14,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔白ソーダ] ゲーム,2025/12/13,,,2025/12/13,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔雲ふわり] 朝活,2025/12/14,06:30,2025/12/14,07:30,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/14,12:00,2025/12/14,13:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] 雑談,2025/12/14,15:00,2025/12/14,16:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/14,18:00,2025/12/14,19:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/14,18:00,2025/12/14,19:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] 企画,2025/12/14,19:00,2025/12/14,20:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/14,19:00,2025/12/14,20:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] コラボ,2025/12/14,20:00,2025/12/14,21:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRC,2025/12/14,21:00,2025/12/14,22:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/14,,,2025/12/14,,にゃんたじあ！スケジュール(時間指定なし),True`;
+[若魔藤あんず] 雑談,2025/12/15,20:00,2025/12/15,21:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] VRC,2025/12/15,21:00,2025/12/15,22:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRC,2025/12/15,21:00,2025/12/15,22:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/15,23:30,2025/12/16,00:30,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] 朝活,2025/12/15,07:00,2025/12/15,08:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] 講座,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] 講座,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] コラボ,2025/12/16,21:00,2025/12/16,22:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/16,,2025/12/16,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔麦たると] コラボ,2025/12/16,20:00,2025/12/16,21:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/16,19:00,2025/12/16,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ゲーム,2025/12/16,12:15,2025/12/16,13:15,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/17,00:00,2025/12/17,01:00,にゃんたじあ！スケジュール(24:00表記),False
+[若魔陽エル] ゲーム,2025/12/16,12:00,2025/12/16,13:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/16,20:00,2025/12/16,21:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] ゲーム,2025/12/16,19:00,2025/12/16,20:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] ゲーム,2025/12/16,21:00,2025/12/16,22:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] ゲーム,2025/12/17,20:00,2025/12/17,21:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] コラボ,2025/12/17,14:00,2025/12/17,15:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] コラボ,2025/12/17,20:00,2025/12/17,21:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] ゲーム,2025/12/17,19:00,2025/12/17,20:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] VRC,2025/12/17,21:00,2025/12/17,22:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/17,19:00,2025/12/17,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ゲーム,2025/12/17,19:00,2025/12/17,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRC,2025/12/17,21:00,2025/12/17,22:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/18,00:00,2025/12/18,01:00,にゃんたじあ！スケジュール(24:00表記),False
+[若魔陽エル] ゲーム,2025/12/17,08:00,2025/12/17,09:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] ゲーム,2025/12/17,18:00,2025/12/17,19:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] ゲーム,2025/12/17,21:00,2025/12/17,22:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/18,,2025/12/18,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔麦たると] ゲーム,2025/12/18,19:00,2025/12/18,20:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/18,19:00,2025/12/18,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] 朝活,2025/12/18,06:30,2025/12/18,07:30,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRC,2025/12/18,21:00,2025/12/18,22:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/18,12:00,2025/12/18,13:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/18,18:00,2025/12/18,19:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] VRC,2025/12/18,21:00,2025/12/18,22:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] ゲーム,2025/12/18,18:00,2025/12/18,19:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] VRC,2025/12/19,21:00,2025/12/19,22:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/19,,2025/12/19,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔麦たると] 雑談,2025/12/19,19:30,2025/12/19,20:30,にゃんたじあ！スケジュール,False
+[若魔麦たると] VRC,2025/12/19,21:00,2025/12/19,22:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/19,19:00,2025/12/19,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/20,00:00,2025/12/20,01:00,にゃんたじあ！スケジュール(24:00表記),False
+[若魔陽エル] 朝活,2025/12/19,07:00,2025/12/19,08:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] コラボ,2025/12/19,20:00,2025/12/19,21:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] 企画,2025/12/19,21:00,2025/12/19,22:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] ゲーム,2025/12/20,15:00,2025/12/20,16:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/20,,2025/12/20,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔白ソーダ] イベント,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] ゲーム,2025/12/20,14:00,2025/12/20,15:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] VRC,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/20,19:00,2025/12/20,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ゲーム,2025/12/20,12:15,2025/12/20,13:15,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] イベント,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/21,00:00,2025/12/21,01:00,にゃんたじあ！スケジュール(24:00表記),False
+[若魔陽エル] ゲーム,2025/12/20,12:00,2025/12/20,13:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] イベント,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] メン限,2025/12/20,23:00,2025/12/21,00:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] 動画投稿,2025/12/20,18:00,2025/12/20,19:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] 歌枠,2025/12/21,19:00,2025/12/21,20:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/21,,2025/12/21,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔麦たると] 歌枠,2025/12/21,,2025/12/21,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔影ネオン] ゲーム,2025/12/21,19:00,2025/12/21,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] 歌枠,2025/12/21,20:30,2025/12/21,21:30,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRCコラボ,2025/12/21,23:00,2025/12/22,00:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/21,12:00,2025/12/21,13:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] 歌枠,2025/12/21,19:45,2025/12/21,20:45,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] ゲーム,2025/12/21,18:00,2025/12/21,19:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] ゲーム,2025/12/21,19:00,2025/12/21,20:00,にゃんたじあ！スケジュール,False`;
         function E(t){const u=t.trim().split(/\r?\n/),v=[];for(let w=1;w<u.length;w++){const x=u[w].trim();if(!x)continue;const y=x.split(","),z=y.length;if(z<7)continue;const a0=y[0].trim(),a1=y[1].trim(),a2=(y[2]||"").trim(),a3=(y[3]||"").trim(),a4=(y[4]||"").trim(),a5=(y[z-1]||"").trim(),a6=y.slice(5,z-1).join(",").trim(),a7=a3||a1,a8=a4;const a9=a0.match(/^\[(.*?)\]/),aa=a9?a9[1]:"不明",ab=a0.replace(/^\[.*?\]\s*/,"");v.push({member:aa,title:ab,startDate:a1,startTime:a2,endDate:a7,endTime:a8,description:a6,allDay:a5==="True"})}const w=[...new Set(v.map(a=>a.member))];return{events:v,members:w}}
         const F=E(D);
         function G(){
