--- a/index.html
+++ b/index.html
@@ -42,78 +42,71 @@
     (()=>{
         const A=React,B=A.useState,C=A.useMemo;
         const D=`Subject,Start Date,Start Time,End Date,End Time,Description,All Day Event
-[若魔藤あんず] 雑談,2025/12/15,20:00,2025/12/15,21:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRC,2025/12/15,21:00,2025/12/15,22:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] VRC,2025/12/15,21:00,2025/12/15,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/15,23:30,2025/12/16,00:30,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] 朝活,2025/12/15,07:00,2025/12/15,08:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] 講座,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] 講座,2025/12/15,19:00,2025/12/15,20:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] コラボ,2025/12/16,21:00,2025/12/16,22:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/16,,2025/12/16,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔麦たると] コラボ,2025/12/16,20:00,2025/12/16,21:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/16,19:00,2025/12/16,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ゲーム,2025/12/16,12:15,2025/12/16,13:15,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/17,00:00,2025/12/17,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔陽エル] ゲーム,2025/12/16,12:00,2025/12/16,13:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/16,20:00,2025/12/16,21:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/16,19:00,2025/12/16,20:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] ゲーム,2025/12/16,21:00,2025/12/16,22:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] ゲーム,2025/12/17,20:00,2025/12/17,21:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] コラボ,2025/12/17,14:00,2025/12/17,15:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] コラボ,2025/12/17,20:00,2025/12/17,21:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] ゲーム,2025/12/17,19:00,2025/12/17,20:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRC,2025/12/17,21:00,2025/12/17,22:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/17,19:00,2025/12/17,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ゲーム,2025/12/17,19:00,2025/12/17,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] VRC,2025/12/17,21:00,2025/12/17,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/18,00:00,2025/12/18,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔陽エル] ゲーム,2025/12/17,08:00,2025/12/17,09:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/17,18:00,2025/12/17,19:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] ゲーム,2025/12/17,21:00,2025/12/17,22:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/18,,2025/12/18,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔麦たると] ゲーム,2025/12/18,19:00,2025/12/18,20:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/18,19:00,2025/12/18,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] 朝活,2025/12/18,06:30,2025/12/18,07:30,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] VRC,2025/12/18,21:00,2025/12/18,22:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/18,12:00,2025/12/18,13:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/18,18:00,2025/12/18,19:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] VRC,2025/12/18,21:00,2025/12/18,22:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/18,18:00,2025/12/18,19:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] VRC,2025/12/19,21:00,2025/12/19,22:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/19,,2025/12/19,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔麦たると] 雑談,2025/12/19,19:30,2025/12/19,20:30,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRC,2025/12/19,21:00,2025/12/19,22:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/19,19:00,2025/12/19,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/20,00:00,2025/12/20,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔陽エル] 朝活,2025/12/19,07:00,2025/12/19,08:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] コラボ,2025/12/19,20:00,2025/12/19,21:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] 企画,2025/12/19,21:00,2025/12/19,22:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] ゲーム,2025/12/20,15:00,2025/12/20,16:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/20,,2025/12/20,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔白ソーダ] イベント,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] ゲーム,2025/12/20,14:00,2025/12/20,15:00,にゃんたじあ！スケジュール,False
-[若魔麦たると] VRC,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
-[若魔影ネオン] ゲーム,2025/12/20,19:00,2025/12/20,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ゲーム,2025/12/20,12:15,2025/12/20,13:15,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] イベント,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] ASMR,2025/12/21,00:00,2025/12/21,01:00,にゃんたじあ！スケジュール(24:00表記),False
-[若魔陽エル] ゲーム,2025/12/20,12:00,2025/12/20,13:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] イベント,2025/12/20,21:00,2025/12/20,22:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] メン限,2025/12/20,23:00,2025/12/21,00:00,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] 動画投稿,2025/12/20,18:00,2025/12/20,19:00,にゃんたじあ！スケジュール,False
-[若魔藤あんず] 歌枠,2025/12/21,19:00,2025/12/21,20:00,にゃんたじあ！スケジュール,False
-[若魔白ソーダ] ゲーム,2025/12/21,,2025/12/21,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔麦たると] 歌枠,2025/12/21,,2025/12/21,,にゃんたじあ！スケジュール(時間指定なし),True
-[若魔影ネオン] ゲーム,2025/12/21,19:00,2025/12/21,20:00,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] 歌枠,2025/12/21,20:30,2025/12/21,21:30,にゃんたじあ！スケジュール,False
-[若魔雲ふわり] VRCコラボ,2025/12/21,23:00,2025/12/22,00:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] ゲーム,2025/12/21,12:00,2025/12/21,13:00,にゃんたじあ！スケジュール,False
-[若魔陽エル] 歌枠,2025/12/21,19:45,2025/12/21,20:45,にゃんたじあ！スケジュール,False
-[ニャマシュバ・ルッツ] ゲーム,2025/12/21,18:00,2025/12/21,19:00,にゃんたじあ！スケジュール,False
-[ニャマルベール・ペルル] ゲーム,2025/12/21,19:00,2025/12/21,20:00,にゃんたじあ！スケジュール,False`;
+[若魔藤あんず] VRC,2025/12/22,21:00,2025/12/22,22:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] コラボ,2025/12/22,14:00,2025/12/22,15:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/22,19:00,2025/12/22,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRC,2025/12/22,21:00,2025/12/22,22:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/22,23:30,2025/12/23,00:30,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/22,20:00,2025/12/22,21:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] 朝活,2025/12/22,07:00,2025/12/22,08:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] コラボ,2025/12/23,20:00,2025/12/23,21:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] コラボ,2025/12/23,20:00,2025/12/23,21:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] ゲーム,2025/12/23,19:00,2025/12/23,20:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/23,19:00,2025/12/23,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] コラボ,2025/12/23,20:00,2025/12/23,21:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/24,00:00,2025/12/24,01:00,にゃんたじあ！スケジュール(24:00表記),False
+[ニャマシュバ・ルッツ] 動画投稿,2025/12/23,,2025/12/23,,にゃんたじあ！スケジュール(時間指定なし),True
+[ニャマシュバ・ルッツ] コラボ,2025/12/23,20:00,2025/12/23,21:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] コラボ,2025/12/23,20:00,2025/12/23,21:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] にゃまラジ！クリスマススペシャル,2025/12/24,19:00,2025/12/24,20:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] 雑談,2025/12/25,20:00,2025/12/25,21:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] 雑談,2025/12/25,21:00,2025/12/25,22:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] 歌枠,2025/12/25,21:00,2025/12/25,22:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/25,19:00,2025/12/25,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ゲーム,2025/12/25,12:00,2025/12/25,13:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] 告知,2025/12/25,20:00,2025/12/25,21:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] 企画,2025/12/25,20:00,2025/12/25,21:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] ゲーム,2025/12/25,,2025/12/25,,にゃんたじあ！スケジュール(時間指定なし),True
+[ニャマルベール・ペルル] 企画,2025/12/25,20:00,2025/12/25,21:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] メン限,2025/12/25,21:30,2025/12/25,22:30,にゃんたじあ！スケジュール,False
+[若魔藤あんず] ？？？,2025/12/26,15:30,2025/12/26,16:30,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/26,,2025/12/26,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔麦たると] ゲーム,2025/12/26,19:00,2025/12/26,20:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/26,19:00,2025/12/26,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] 朝活,2025/12/26,07:00,2025/12/26,08:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRC,2025/12/26,21:00,2025/12/26,22:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] ASMR,2025/12/26,23:00,2025/12/27,00:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/26,17:00,2025/12/26,18:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] VRC,2025/12/26,21:00,2025/12/26,22:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] コラボ,2025/12/26,18:00,2025/12/26,19:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] ゲーム,2025/12/27,15:00,2025/12/27,16:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] VRC,2025/12/27,21:00,2025/12/27,22:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] メン限,2025/12/27,20:00,2025/12/27,21:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/27,19:00,2025/12/27,20:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/27,17:00,2025/12/27,18:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] VRC,2025/12/27,21:00,2025/12/27,22:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] 動画投稿,2025/12/27,18:00,2025/12/27,19:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] コラボ,2025/12/27,20:00,2025/12/27,21:00,にゃんたじあ！スケジュール,False
+[ニャマルベール・ペルル] コラボ,2025/12/27,20:00,2025/12/27,21:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] VRC,2025/12/28,18:00,2025/12/28,19:00,にゃんたじあ！スケジュール,False
+[若魔藤あんず] コラボ,2025/12/28,21:00,2025/12/28,22:00,にゃんたじあ！スケジュール,False
+[若魔白ソーダ] ゲーム,2025/12/28,,2025/12/28,,にゃんたじあ！スケジュール(時間指定なし),True
+[若魔麦たると] VRC,2025/12/28,07:00,2025/12/28,08:00,にゃんたじあ！スケジュール,False
+[若魔麦たると] ゲーム,2025/12/28,15:00,2025/12/28,16:00,にゃんたじあ！スケジュール,False
+[若魔影ネオン] ゲーム,2025/12/28,19:00,2025/12/28,20:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] VRC,2025/12/28,07:00,2025/12/28,08:00,にゃんたじあ！スケジュール,False
+[若魔雲ふわり] 歌枠,2025/12/28,19:00,2025/12/28,20:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] VRC,2025/12/28,18:00,2025/12/28,19:00,にゃんたじあ！スケジュール,False
+[若魔陽エル] ゲーム,2025/12/28,20:00,2025/12/28,21:00,にゃんたじあ！スケジュール,False
+[ニャマシュバ・ルッツ] ゲーム,2025/12/28,,2025/12/28,,にゃんたじあ！スケジュール(時間指定なし),True
+[ニャマルベール・ペルル] 雑談,2025/12/28,21:00,2025/12/28,22:00,にゃんたじあ！スケジュール,False`;
         function E(t){const u=t.trim().split(/\r?\n/),v=[];for(let w=1;w<u.length;w++){const x=u[w].trim();if(!x)continue;const y=x.split(","),z=y.length;if(z<7)continue;const a0=y[0].trim(),a1=y[1].trim(),a2=(y[2]||"").trim(),a3=(y[3]||"").trim(),a4=(y[4]||"").trim(),a5=(y[z-1]||"").trim(),a6=y.slice(5,z-1).join(",").trim(),a7=a3||a1,a8=a4;const a9=a0.match(/^\[(.*?)\]/),aa=a9?a9[1]:"不明",ab=a0.replace(/^\[.*?\]\s*/,"");v.push({member:aa,title:ab,startDate:a1,startTime:a2,endDate:a7,endTime:a8,description:a6,allDay:a5==="True"})}const w=[...new Set(v.map(a=>a.member))];return{events:v,members:w}}
         const F=E(D);
         function G(){
