--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8" />
-    <title>にゃんたじあ スケジュールツール</title>
+    <title>にゃんたじあ スケジュール</title>
     <!-- © Nyantagia Schedule Tool — Redistribution Prohibited -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body class="container py-4">
-<h2 class="mb-1 fw-bold">にゃんたじあ スケジュールツール</h2>
+<h2 class="mb-1 fw-bold">にゃんたじあ スケジュール</h2>
 <div id="app"></div>
 
 <script type="text/babel">
